# care-companion

./: .dockerignore  .gitignore  DockerFile  LICENSE  README.md  SETUP.md  clouds.yaml  pyproject.toml  requirements.txt  set-openstack-env.sh
.github/: create_kvm_vm.yml  terraform.yml
.github/workflows/: create_kvm_resources.yml  terraform.yml  test.yml
Docker/: DockerFile  Dockerfile.jupyter-mlflow  docker-compose-chest-etl.yaml  docker-compose-chi-tacc.yaml  docker-compose-data-pipeline.yaml  docker-compose-etl.yaml  docker-compose-kaggle-setup.yaml  docker-compose-tracking_sevice.yaml  docker-compose-train.yaml  docker-compose-wrist-etl.yaml  jupyter-onnx-cpu-dockerfile.yaml  prometheus.template.yml  prometheus.yml
Docker/serve/: Dockerfile.fastapi  (+9 more)
ansible/: ansible.cfg  clouds.yaml  inventory.yml
notebooks/: create_server_amd.ipynb  create_server_kvm.ipynb  create_server_nvidia.ipynb
openstack/: README.md  create_resources.sh
scripts/: create_block_storage.sh  create_object_storage.sh  host_setup.sh  setup-gpu-operator.sh  verify_storage_mounts.sh
src/: CustomDatasetWrist.py  CustomDatasetXray.py  chest-xray-trainer.py  chest_xray_trainer.py  data_pipeline.py  rearrangechestdata.py  rearrangewristdata.py  run_data_pipeline.py  test_wrist_trainer.py
terraform/: reserve_gpu.sh
utils/: convert_onx_to_ov.py  convert_torch_to_onnx.py  down_build_up_inference_server.sh  scratch.ipynb  scratch.py
workflows/: build-container-image.yaml  build-initial.yaml  data-pipeline-cron.yaml  data-pipeline.yaml  deploy-container-image.yaml  promote-model.yaml
(+89 files in other folders)
